--- a/src/index.css
+++ b/src/index.css
@@ -5,25 +5,26 @@
 
 
 .loader {
-    width: 60px;
-    aspect-ratio: 4;
-    background: radial-gradient(closest-side at calc(100%/6) 50%,#000 90%,#0000) 0/75% 100%;
-    position: absolute;
-    animation: l15-0 1s infinite linear;
+    display: inline-grid;
+    width: 80px;
+    aspect-ratio: 1;
   }
-  .loader::before {
+  .loader:before,
+  .loader:after {
     content:"";
-    position: absolute;
-    background: inherit;
-    clip-path: inset(0 0 0 50%);
-    inset: 0;
-    animation: l15-1 0.5s infinite linear;
+    grid-area: 1/1;
+    border-radius: 50%;
   }
-  @keyframes l15-0 { 
-      0%,49.99% {transform: scale(1)}
-      50%,100%  {transform: scale(-1)} 
+  .loader:before {
+    margin: 25%;
+    background: repeating-conic-gradient(#C02942 0 60deg,#0B486B 0 120deg);
+    transform: rotate(0turn) translate(50%) rotate(0turn);
+    animation: l2 2s alternate infinite ease-in-out;
   }
-  @keyframes l15-1 { 
-      0%       {transform: translateX(-37.5%) rotate(0turn)} 
-      80%,100% {transform: translateX(-37.5%) rotate(1turn)} 
+  .loader:after {
+    padding: 10%;
+    margin: -10%;
+    background: repeating-conic-gradient(from -15deg,#C02942 0 30deg,#0B486B 0 60deg);
+    mask:conic-gradient(from 75deg,#000 210deg,#0000 0) content-box exclude,conic-gradient(from 75deg,#000 210deg,#0000 0);
   }
+  @keyframes l2 {to{transform: rotate(.5turn) translate(50%) rotate(-1turn)}}
